Fix particle issue and make conjugation more readable

--- a/app/src/styles/components/sentenceanalyzer/wordinfo.module.scss
+++ b/app/src/styles/components/sentenceanalyzer/wordinfo.module.scss
@@ -202,106 +202,6 @@
 					}
 				}
 
-				.conjugation {
-					font-family:var(--font-kr-serif);
-					font-weight:normal;
-
-					display:flex;
-					flex-direction:row;
-					align-items:stretch;
-					//padding-left:2rem;
-					gap:2rem;
-					@media screen and (max-width:725px) {
-						flex-direction:column;
-						align-items:center;
-						gap:0.5rem;
-					}
-
-					.additionalInfo {
-						display:flex;
-						flex-direction:column;
-						justify-content:center;
-						align-items:stretch;
-						gap:1rem;
-						max-width:15rem;
-
-						.tense, .formality {
-							font-family:var(--font-kr-serif);
-							font-weight:normal;
-							font-size:1.1rem;
-							border:1px solid #000;
-							border-radius:0.5rem;
-							width:fit-content;
-							overflow:hidden;
-							display: flex;
-							flex-direction: row;
-							
-							.tenseLabel, .formalityLabel {
-								width: 100%;
-								font-weight: 800;
-								background: #000000;
-								color: #ffffff;
-								padding: 0.5rem 0.8rem;
-							}
-							
-							.tenseValue, .formalityValue {
-								width: 100%;
-								background: #fff;
-								color: #000;
-								padding: 0.5rem 0.8rem;
-							}
-						}
-						@media screen and (max-width:725px) {
-							flex-direction:row;
-							flex-wrap:wrap;
-							max-width:100%;
-							margin-bottom:0.5rem;
-							.tense, .formality {
-								font-size:0.9rem;
-								& * {
-									padding:0.1rem 0.3rem;
-								}
-							}
-						}
-					}
-
-
-					.steps {
-						flex:1;
-						.stepsHeader {
-							font-weight:800;
-							text-align:center;
-							padding-bottom:0.5rem;
-							font-size:1.4rem;
-							border-bottom:1px solid #c9c9c9;
-							font-weight:300;
-						}
-						.stepsContent {
-							display:flex;
-							justify-content:center;
-							margin-top:1rem;
-							.step {
-							font-family:var(--font-kr-serif);
-							font-size:1.6rem;
-							font-weight:bold;
-							text-align:center;
-							}
-						}
-						@media screen and (max-width:725px) {
-							.stepsHeader {
-								font-size:1.2rem;
-							}
-							.stepsContent {
-								.step {
-									font-size:1.2rem;
-								}
-							}
-						}
-					}
-					@media screen and (max-width:725px) {
-						margin-bottom:0.5rem;
-					}
-				}
 			}
 
 		}
